force-app/main/default/objects/Connector_Configurations__c/Connector_Configurations__c.object-meta.xml
<CustomObject>
    <label>Connector Configuration</label>
    <nameField>
        <displayFormat>Config-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connector Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>