force-app/main/default/objects/Connector_Configurations__c/fields/Authentication__c.field-meta.xml
<CustomField>
    <fullName>Authentication__c</fullName>
    <formula>TEXT(Netsuite_Instance__r.Authentication_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authentication</label>
    <type>Text</type>
</CustomField>