force-app/main/default/objects/Connector_Configurations__c/fields/JSON_Mapping__c.field-meta.xml
<CustomField>
    <fullName>JSON_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked while enabling sync and field mapping is added in the field mapping object.</description>
    <inlineHelpText>Checked while enabling sync and field mapping is added in the field mapping object.</inlineHelpText>
    <label>JSON Mapping</label>
    <type>Checkbox</type>
</CustomField>