force-app/main/default/objects/Connector_Configurations__c/fields/Netsuite_Instance__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Instance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Select NetSuite sandbox or production environment.</description>
    <inlineHelpText>Select NetSuite sandbox or production environment.</inlineHelpText>
    <label>Netsuite Instance</label>
    <referenceTo>NS_Sandboxes__c</referenceTo>
    <relationshipLabel>Connector Configurations</relationshipLabel>
    <relationshipName>Connector_Configurations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>