force-app/main/default/objects/Connector_Configurations__c/fields/NS_Requests_Delete_Days__c.field-meta.xml
<CustomField>
    <fullName>NS_Requests_Delete_Days__c</fullName>
    <description>Based this field value NS Requests will be pulled in the Delete NS Requests batch process.</description>
    <inlineHelpText>Based on the number of days (n) provided system will delete the NS Requests records created which are (n) days ago.</inlineHelpText>
    <label>NS Requests Delete Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>