force-app/main/default/objects/Connector_Configurations__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <description>Holds the Cron expression.</description>
    <inlineHelpText>Default Cron Expression: 0 0 0 * * ?</inlineHelpText>
    <label>Schedule Preference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>