force-app/main/default/objects/Connector_Configurations__c/fields/Schedule_Delete_Job__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Delete_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Delete Job</label>
    <type>Checkbox</type>
</CustomField>